--- a/tex/seq64_concepts.tex
+++ b/tex/seq64_concepts.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2018-10-05
+% \update      2018-10-27
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -251,10 +251,12 @@
    \index{sequence}
    \textsl{Sequence} is
    another synonym for \textsl{pattern}, used in some of the \textsl{Seq24}
-   documentation.  \textsl{Loop} is another synonym.
+   documentation.  \textsl{Loop} and \textsl{track} are other synonyms.
    Each sequence is represented by a box (pattern slot) in the Patterns window.
+   Each sequence can be layed out to repeat in various ways in the Song editor
+   window.
 
-   Note that many, for other sequencer applications) use the term "sequence"
+   Note that other sequencer applications) use the term "sequence"
    to apply to the complete song, and not just to one track or pattern in the
    entire song.
 
