--- a/tex/seq64_headless.tex
+++ b/tex/seq64_headless.tex
@@ -56,7 +56,7 @@
    simplicity, JACK is not running, and so ALSA is in force.
 
    \textbf{First}, after booting, plug in the MIDI keyboard or MIDI control
-   pad.  Our example here will use the Korg nanoKEY2 keyboard.  
+   pad.  Our example here will use the \textsl{Korg nanoKEY2} keyboard.  
 
    \textbf{Second}, start the desired (software) synthesizer.  We will use the
    synth \textsl{Yoshimi}, with a stock setup from our "Yoshimi Cookbook"
