--- a/tex/seq64_kudos.tex
+++ b/tex/seq64_kudos.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-08-29
-% \update      2018-01-24
+% \update      2018-10-28
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -72,6 +72,10 @@
          some bug reports, and, we are pretty sure, some nice videos that
          demonstrate \textsl{Sequencer64} on \textsl{YouTube}.  See
          \cite{layk}.
+      \item \textsl{matt-bel}:
+         reported a regression from \textsl{Seq24}, which could use
+         a MIDI control event to mute/unmute multiple patterns at once,
+         a cool feature!
          
    \end{itemize}
 
