--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2018-10-21
+% \update      2018-10-27
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -766,7 +766,7 @@
 
    Here one can choose to edit the pattern, cut and copy the pattern,
    set the MIDI bus/channel, and more.
-   One can also clear all performance data for the pattern.
+   One can also clear all performance (song) data for the pattern.
    Here are the Gtkmm menu entries:
    
    \begin{enumber}
@@ -1528,7 +1528,8 @@
    \index{multi-wid}
    multiple live panels showing more than one set at a time.
    The default is to show the usual single "mainwid".
-   In the Qt user-interface, multiple live panels can be opened.
+   In the Qt user-interface, multiple live panels in separate windows
+   can be opened.
 
 \begin{figure}[H]
    \centering 
