--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -189,13 +189,12 @@
    \textsl{Sequencer64}.
 
    \begin{itemize}
-      \item Native JACK MIDI support!  At last!
+      \item Native JACK MIDI support!
       \item Tempo events are recordable and editable, in the first track.
       \item A "Tap" button sets the BPM by tapping a button or a key.
-      \item Supports more than one visible screen-set ("multi-set", or
-         multiple live-frame windows).
-
-      \item Supports screen-sets other than 8x4 ("variset").
+      \item Supports multiple screen-sets ("multi-set") or
+         live-frame windows.
+      \item Supports screen-set dimensions other than 8x4 ("variset").
       \item The \textsl{event editor}
          provides basic viewing and editing of MIDI events as text.
       \item \textsl{Sequencer64} reads SMF 0 MIDI files, split
@@ -256,8 +255,7 @@
 %        redraw rate, changes in the row and column sizes of a set, and showing
 %        multiple sets in the main window.
       \item An option to map events to a single MIDI buss for testing.
-      \item Support for additional PPQN values, including
-         the PPQN of the MIDI file.
+      \item Support for additional PPQN values, or the PPQN of the MIDI file.
       \item Improvements in appearance, too many to mention here.
 %     \begin{itemize}
 %        \item Support for showing empty (having only meta
