--- a/tex/seq64_midi_formats.tex
+++ b/tex/seq64_midi_formats.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-09-03
-% \update      2017-12-17
+% \update      2018-10-31
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -21,36 +21,34 @@
 \subsection{Standard MIDI Format 0}
 \label{subsec:midi_format_smf_0}
 
-   \textbf{New:}
-   \index{new!smf 0 support}
-   \index{new!channel split}
-   \textsl{Sequencer64} can now read and import SMF 0 MIDI files, and performs
+   \index{smf 0}
+   \index{channel split}
+   \textsl{Sequencer64} can read and import SMF 0 MIDI files, and performs
    channel splitting automatically.
-
    When an SMF 0 format is detected, \textsl{Sequencer64}
-   reads the file as if were an SMF 1 file, but puts all of the events into the
+%  reads the file as if were an SMF 1 file, but
+   puts all of the events into the
    same sequence/pattern.  While the file is being processed, a list of the
    channels present in the track is maintained.
 
-   Tempo and Time Signature events are also read, if present in the file.
-   (This new feature also holds for SMF 1 songs.
-   In addition, when saving a \textsl{Sequencer64} MIDI file, in non-legacy
-   mode, the Tempo and Time Signature events are now also saved as MIDI events.
+   Tempo and Time Signature events are read, if present.
+   When saving a \textsl{Sequencer64} MIDI file,
+%  in non-legacy mode,
+   the Tempo and Time Signature events are saved as MIDI events.
    \index{new!time/tempo saved}
-   This allows other sequencers to more thoroughly read a \textsl{Sequencer64}
-   MIDI file.)
-   
-   This addition of Tempo can also fix imported tracks that don't have a
-   measure value (e.g. it has 0 instead of at least one measure) associated
-   with them; unfixed, these tracks have racing progress bars that don't
-   reflect the actually progresss through the track.
+   This allows other sequencers to read a \textsl{Sequencer64} MIDI file.
+   This addition of Tempo can fix imported tracks that don't have a
+   measure value.
+%  (e.g. it has 0 instead of at least one measure) associated
+%  with them; unfixed, these tracks have racing progress bars that don't
+%  reflect the actually progresss through the track.
 
-   Once the end-of-track is encountered for that sequence, one new empty
-   sequence is created for each channel found in the original (main) sequence.
-   The events in the main sequence are scanned, one by one, and added at the
-   end of the appropriate sequence.  If the event is a channel event,
-   then the event is inserted into the sequence that was created for that
-   channel.  If the event is a non-channel event, then each sequence gets a
+   Once the end-of-track is encountered for that pattern, one new empty
+   pattern is created for each channel found in the original sequence.
+   The events in the main patten are scanned, one by one, and added at the
+   end of the appropriate patten.  If the event is a channel event,
+   then the event is inserted into the patten that was created for that
+   channel.  If the event is a non-channel event, then each patten gets a
    copy of that event.
 
    After processing, the MIDI buss information, track name, and other pieces of
@@ -59,41 +57,40 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.75]{smf0/imported-smf-0-song.png}
+   \includegraphics[scale=0.65]{smf0/imported-smf-0-song.png}
    \caption{Imported SMF 0 MIDI Song}
    \label{fig:imported_smf_0_song}
 \end{figure}
 
-   The original imported SMF 0 track is preserved, intact, in main window
+   The imported SMF 0 track is preserved, in
    pattern slot \#16.  It is highlighted in a dark cyan color to remind the
-   user that it is not a normal, playable \textsl{Sequencer64} 
-   sequence.  It has no channel number.  It is
-   assigned the non-existent MIDI channel of 0.  If the original track had no
-   title, this track is named "Untitled".  Normally, one will either delete
-   this track before saving the file, or at least keep it muted.
+   user that it is a special \textsl{Sequencer64} pattern.
+%  It has no channel number.  It is
+%  assigned the non-existent MIDI channel of 0.
+   If the original track had no
+   title, this track is named "Untitled".
+   One will either delete
+   this track before saving the file, or keep it muted.
 
-   Each new, single-channel track is given a title of either the form
+   Each single-channel track is given a title of either the form
    "N: Track-name" or, if the song was untitled, "Track N".
-   The sequence number of each new track is the internal channel number (which
-   is always the actual MIDI channel number minus one).
-
-   The time-signature of each track is currently set to defaults, unless a
+   The sequence number of each new track is the internal channel number
+   (always the actual MIDI channel number minus one).
+   The time-signature of each track is set to defaults, unless a
    time-signature event is encountered in the imported file.
 
-   \textbf{New:}
-   \index{new!tempo events}
-   \index{new!time signature events}
-   \textsl{Sequencer64} adds support for obtaining some of the other
+   \index{tempo events}
+   \index{time signature events}
+   \textsl{Sequencer64} supports reading some other
    information a MIDI SMF 0 track might have, such as the Tempo and the
-   Time Signature.  It also now will save this information in the first track
+   Time Signature.  It saves this information in the first track
    of the MIDI file.
-
-   The original SMF 0 track is also shown in the song editor, as shown in the
+   The original SMF 0 track is also shown in the song editor, as in the
    following figure.
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.75]{smf0/imported-smf-0-song-editor.png}
+   \includegraphics[scale=0.65]{smf0/imported-smf-0-song-editor.png}
    \caption{SMF 0 MIDI Song in the Song Editor}
    \label{fig:imported_smf_0_song_editor}
 \end{figure}
@@ -105,93 +102,132 @@
 \subsection{Legacy Proprietary Track Format}
 \label{subsec:legacy_midi_format}
 
-   The authors of \textsl{Seq24} took the trouble to make sure that the format
-   of the MIDI files it write are compatible with other MIDI applications.
+   The authors of \textsl{Seq24} took trouble to ensure that the format
+   of the MIDI files it writes are compatible with other MIDI applications.
    \textsl{Seq24} also stores its own information (triggers, MIDI control
    information, etc) in the file, but marked so that other sequencers can read
-   the file and ignore the \textsl{Seq24}-specific information.
+   the file and ignore its \textsl{Seq24}-specific information.
 
    \textsl{Sequencer64} continues that MIDI-compliant behavior, but has
-   improved the compliance just a little bit. 
+   improved the compliance a bit. 
    We call that last chunk of sequencer-specific information the "proprietary
    track".
    Before we discuss that last, proprietary track, note that the normal MIDI
    tracks that
-   precede it include the SeqSpec ("sequencer-specific", sort of)
-   control tags shown in \tableref{table:seqspec_items_normal_tracks}.
-   These control tags are global constants in the \textsl{Seq24} source
-   code, ranging from 0x24240001 to 0x24240013.
+   precede it include the SeqSpec ("sequencer-specific")
+   control tags.
+%  shown in \tableref{table:seqspec_items_normal_tracks}.
+%  These control tags are global constants in the \textsl{Seq24} source
+%  code, ranging from 0x24240001 to 0x24240013.
+%
+%  \begin{table}[htb]
+%     \centering
+%     \caption{SeqSpec Items in Normal Tracks}
+%     \label{table:seqspec_items_normal_tracks}
+%     \begin{tabular}{l l}
+%        \texttt{c\_midibus}        & \texttt{24 24 00 01 00 00 00 00} \\
+%        \texttt{c\_midich}         & \texttt{24 24 00 02 00 00 00 00} \\
+%        \texttt{c\_triggers}       & \texttt{24 24 00 04 00 00 00 00} \\
+%        \texttt{c\_timesig}        & \texttt{24 24 00 06 00 00 00 00} \\
+%        \texttt{c\_triggers\_new}  & \texttt{24 24 00 08 00 00 00 00} \\
+%        \texttt{c\_musickey}       & \texttt{24 24 00 11 00} \\
+%        \texttt{c\_musicscale}     & \texttt{24 24 00 12 00} \\
+%        \texttt{c\_backsequence}   & \texttt{24 24 00 13 00 00 00 00} \\
+%     \end{tabular}
+%  \end{table}
+%
+
+   All of the SeqSpecs are shown in the next table.
+   The \texttt{c\_triggers} tag is obsolete, but still present.
 
    \begin{table}[htb]
       \centering
-      \caption{SeqSpec Items in Normal Tracks}
-      \label{table:seqspec_items_normal_tracks}
+      \caption{All SeqSpec Items}
+      \label{table:seqspec_items_all}
       \begin{tabular}{l l}
          \texttt{c\_midibus}        & \texttt{24 24 00 01 00 00 00 00} \\
          \texttt{c\_midich}         & \texttt{24 24 00 02 00 00 00 00} \\
+         \texttt{c\_midiclocks}     & \texttt{24 24 00 03 00 00 00 00} \\
          \texttt{c\_triggers}       & \texttt{24 24 00 04 00 00 00 00} \\
+         \texttt{c\_notes}          & \texttt{24 24 00 05 00 00 00 00} \\
          \texttt{c\_timesig}        & \texttt{24 24 00 06 00 00 00 00} \\
+         \texttt{c\_bpmtag}         & \texttt{24 24 00 07 00 00 00 00} \\
          \texttt{c\_triggers\_new}  & \texttt{24 24 00 08 00 00 00 00} \\
+         \texttt{c\_mutegroups}     & \texttt{24 24 00 09 00 00 00 00} \\
+         \texttt{c\_gap\_A}         & \texttt{24 24 00 0A 00 00 00 00} \\
+         \texttt{c\_gap\_B}         & \texttt{24 24 00 0B 00 00 00 00} \\
+         \texttt{c\_gap\_C}         & \texttt{24 24 00 0C 00 00 00 00} \\
+         \texttt{c\_gap\_D}         & \texttt{24 24 00 0D 00 00 00 00} \\
+         \texttt{c\_gap\_E}         & \texttt{24 24 00 0E 00 00 00 00} \\
+         \texttt{c\_gap\_F}         & \texttt{24 24 00 0F 00 00 00 00} \\
+         \texttt{c\_midictrl}       & \texttt{24 24 00 10 00} \\
          \texttt{c\_musickey}       & \texttt{24 24 00 11 00} \\
          \texttt{c\_musicscale}     & \texttt{24 24 00 12 00} \\
          \texttt{c\_backsequence}   & \texttt{24 24 00 13 00 00 00 00} \\
+         \texttt{c\_transpose}      & \texttt{24 24 00 14 00 00 00 00} \\
+         \texttt{c\_perf\_bp\_mess} & \texttt{24 24 00 15 00 00 00 00} \\
+         \texttt{c\_perf\_bw}       & \texttt{24 24 00 16 00 00 00 00} \\
+         \texttt{c\_tempo\_map}     & \texttt{24 24 00 17 00 00 00 00} \\
+         \texttt{c\_reserver\_1}    & \texttt{24 24 00 18 00 00 00 00} \\
+         \texttt{c\_reserver\_2}    & \texttt{24 24 00 19 00 00 00 00} \\
+         \texttt{c\_tempo\_track}   & \texttt{24 24 00 1A 00 00 00 00} \\
+         \texttt{c\_seq\_color}     & \texttt{24 24 00 1B 00 00 00 00} \\
+         \texttt{c\_seq\_edit\_mode} & \texttt{24 24 00 1C 00 00 00 00} \\
       \end{tabular}
    \end{table}
 
-   The \texttt{c\_triggers} tag is obsolete.
-
-   \textbf{New:}
-   \index{new!saved control tags}
+   \index{saved control tags}
    The \texttt{c\_musickey},
    \texttt{c\_musicscale}, and
    \texttt{c\_backsequence}
-   control tags are new with \textsl{Sequencer64} version 0.9.9.7 and above.
-   They are now saved as additional information in each sequence in which they
+   control tags are new with \textsl{Sequencer64}.
+   They are saved as additional information in each sequence in which they
    have been specified in the sequence editor.
-   However, for backward compatibility (and because it is probably the more
+   For backward compatibility (and because it is probably the more
    common use case), these items can also be
    saved globally for the whole MIDI song, as an option.
 
-   Note that these tags (created by the application, but not present in the
-   proprietary track, and perhaps also created by other MIDI applications) are
-   preceded by the standard MIDI "FF 7F length" meta-event sequence.
-
+   These tags
+%  (created by the application, but not present in the
+%  proprietary track, and perhaps also created by other MIDI applications)
+   are preceded by the standard MIDI "FF 7F length" meta-event sequence.
    The following discussion applies to the final "proprietary" track as
    saved in the legacy \textsl{Seq24} format.
 
-   After all the counted MIDI tracks are read, \textsl{Seq24} checks for
-   extra data.  If there is extra data, \textsl{Seq24} reads a long value.
+   After all the counted MIDI event
+   tracks are read, \textsl{Seq24} checks for
+   extra data after them.
+   If there is extra data, \textsl{Seq24} reads a long value.
    The first one encountered is a MIDI "sequencer-specific"
    (\textsl{SeqSpec}) section.  It starts with
 
    \begin{verbatim}
-      0x24240010 == a Seq24 c_midictrl proprietary value
+      0x24240010
    \end{verbatim}
 
-   Getting this value first is simplified MIDI in two ways.
-   First, the second does not begin with any kind of track marker.  MIDI
-   requires an "MTrk" marker to start a track, though it also requires
-   unknown markers to be supported.  Some applications, like
-   \textsl{timidity}, handle this situation.  Others, like \textsl{midicvt},
+   which is a Seq24 "c\_midictrl" proprietary value flagged by the
+   number "0x2424".
+%  MIDI requires an "MTrk" marker to start a track, but requires
+   MIDI requires this marker to be supported.  Some applications, like
+   \textsl{timidity}, handle it.  Others % , like \textsl{midicvt},
    complain about an unexpected header marker.
-   Second, normally, MIDI wants to see the triad of
+   Next, MIDI wants to see this triad of bytes
 
    \begin{verbatim}
       status = FF, type= 7F (proprietary), length = whatever
    \end{verbatim}
 
    to precede proprietary data.
-   Now, as shown by \tableref{table:midi_file_support_table},
-   most applications accept the shortcut legacy format, but \textsl{midicvt}
-   does not.
+%  Now, as shown by \tableref{table:midi_file_support_table},
+%  most applications accept the shortcut legacy format, but \textsl{midicvt}
+%  does not.
 
-   So, as a "bug" fix, we now write and read
-   this information properly in \textsl{Sequencer64}; it is now
-   preceded by the \texttt{0xFF 0x7F} marker..
+   \textsl{Sequencer64} writes this information properly,
+   starting with the \texttt{0x242400nn xFF 0x7F} marker.
    We also need to be able to read legacy Seq24 MIDI files, so that ability has
-   been preserved in \textsl{Sequencer64}..
+   been preserved in \textsl{Sequencer64}.
 
-   Anyway, at this point, we have the \textbf{c\_midictrl} information now.
+   At this point, we have the \textbf{c\_midictrl} information now.
    Next, we read a long value, seqs.  It is 0.
 
    \begin{verbatim}
@@ -286,8 +322,8 @@
       \end{tabular}
    \end{table}
 
-For the new format, the components of the final proprietary track size are
-as shown here:
+   For the new format, the components of the final proprietary track size are
+   as shown here:
 
    \begin{enumber}
       \item \textbf{Delta time}.  1 byte, always 0x00.
@@ -304,6 +340,9 @@ as shown here:
       \end{itemize}
       \item \textbf{Track End}. 3 bytes.
    \end{enumber}
+
+   Note that we still need to dig into all the new values that have accumulated
+   over the last couple years!
 
 \subsection{MIDI Information}
 \label{subsec:midi_information}
@@ -365,7 +404,7 @@ as shown here:
 \label{subsubsec:midi_meta_events}
 
    Meta events are non-MIDI data of various sorts consisting of a fixed prefix,
-   type indicator, a length field, and actual event data..
+   type indicator, a length field, and actual event data.
  
    \texttt{meta\_event = 0xFF + meta\_type + v\_length + event\_data\_bytes}
 
